# PsiAnimator-MCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.fast  Dockerfile.light  Dockerfile.minimal  LICENSE  MANIFEST.in  MCP_Guidelines  README.md  environment.yml  pyproject.deployment.toml  pyproject.toml  smithery.yaml
.claude/: settings.local.json
.github/: dependabot.yml
.github/scripts/: check_workflows.sh
.github/workflows/: ci.yml  code-quality.yml  test-install.yml
HELP/: help.md  mcp_package_json.json  mcp_pyproject.txt  mcp_server_workflow.txt  mcp_troubleshooting_guide.md  mcp_tsconfig.json
config/: default_config.json  example-config.json
docs/: API_REFERENCE.md
examples/: basic_usage.py
scripts/: install.ps1  install.sh  postinstall.py  test-pipeline.sh
src/psianimator_mcp/: __init__.py  cli.py  http_server.py  http_server_ultra_fast.py
src/psianimator_mcp/animation/: __init__.py  bloch_sphere.py  energy_levels.py  photon_statistics.py  quantum_circuit.py  quantum_scene.py  state_tomography.py  wigner_function.py
src/psianimator_mcp/quantum/: __init__.py  operations.py  state_manager.py  systems.py  validation.py
src/psianimator_mcp/server/: __init__.py  config.py  exceptions.py  mcp_server.py
src/psianimator_mcp/tools/: __init__.py  animation_tools.py  entanglement_tools.py  evolution_tools.py  gate_tools.py  measurement_tools.py  quantum_state_tools.py
tests/: __init__.py  test_mcp_tools.py  test_quantum_state_manager.py
